using only page as container

--- a/src/app/party-management/adventurer-row/adventurer-row.component.html
+++ b/src/app/party-management/adventurer-row/adventurer-row.component.html
@@ -9,11 +9,11 @@
     {{health}} HP
   </div>
 
-  <button (click)="levelUp()">
+  <button (click)="levelUp.emit()">
     Level Up
   </button>
 
-  <button (click)="deleteAdventurer()">
+  <button (click)="deleteAdventurer.emit()">
     x
   </button>
 </div>
