--- a/src/app/party-management/adventurer-form/adventurer-form.component.html
+++ b/src/app/party-management/adventurer-form/adventurer-form.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="createAdventurer()" [formGroup]="formGroup">
+<form (ngSubmit)="submit()" [formGroup]="formGroup">
   <label>
     Name
     <input type="text" name="name" formControlName="name" />
@@ -6,7 +6,7 @@
   <label>
     Class
     <select type="text" name="class" formControlName="class">
-      <option [value]="adventurerClass.id" *ngFor="let adventurerClass of adventurerClasses$ | async">
+      <option [value]="adventurerClass.id" *ngFor="let adventurerClass of adventurerClasses">
         {{adventurerClass.title}}
       </option>
     </select>
